--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 torch==2.7.1+cu128
-torchvision==0.18.1+cu128
+torchvision==0.22.1+cu128
 torchaudio==2.7.1+cu128
 --extra-index-url https://download.pytorch.org/whl/cu128
 
 albumentations==2.0.8
 scikit-learn==1.7.0
-matplotlib>=3.8.0
-seaborn>=0.13.0
+matplotlib>=3.10.3
+seaborn>=0.13.2
+tqdm==4.67.1
